--- a/web/public/index.html
+++ b/web/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>React App</title>
+    <title>项目模板</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
